<resources>
    <string name="app_name">InvitationModule</string>
    <string name="event_details">Event Details</string>
    <string name="party_event_title">Party/Event Title</string>
    <string name="description">Description</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="location">Location</string>
    <string name="contact_details_host">Contact Details (Host)</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="invite">Invite</string>
    <string name="create_new_invitation">Create new invitation</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invite_people">Invite People</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="get_user_list">get_user_list_to_invite.php</string>
    <string name="select_people">No Selection</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="create_visiting_card">Create Visiting Card</string>
    <string name="create_e_flyer">Create E Flyer</string>
    <string name="create_invitation">Create Invitation</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="login">Login</string>
    <string name="enable_gps">Enable GPS Service</string>
    <string name="need_permission">We need your GPS location to show Near Places around you.</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_want_to_logout">Are you sure, want to logout?</string>
    <string name="check_network_connection">Please Check Your Internet Connection</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="title_activity_maps">Map</string>
    <string name="my_events">My Events</string>
    <string name="invitations">Invitations</string>
    <string name="event_title">Event Title</string>
    <string name="attending">Attending</string>
    <string name="not_attending">Not Attending</string>

    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">Aug</string>
    <string name="september">Sept</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>
    <string name="title_activity_select_location_maps">Map</string>
    <string name="search_event">Search your events</string>

</resources>