<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentCreateInvitation">

    <FrameLayout
        android:id="@+id/frameOne"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/main_shape" />

    <FrameLayout
        android:id="@+id/frameTwo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/frameOne" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/linearCardMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    style="@style/fontSemiBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:gravity="center"
                    android:text="@string/event_details"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:layout_gravity="center"
                    android:background="@drawable/main_layout_dash" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">

                    <EditText
                        android:id="@+id/etEventTitle"
                        style="@style/fontRegulat"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@null"
                        android:gravity="bottom"
                        android:hint="@string/party_event_title"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingHorizontal="10dp"
                        android:paddingBottom="10dp"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#0e3e76" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">

                    <EditText
                        android:id="@+id/etEventDescription"
                        style="@style/fontRegulat"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@null"
                        android:gravity="bottom"
                        android:hint="@string/description"
                        android:inputType="text"
                        android:paddingHorizontal="10dp"
                        android:paddingBottom="10dp"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#0e3e76" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">

                    <EditText
                        android:id="@+id/etContactDetails"
                        style="@style/fontRegulat"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@null"
                        android:gravity="bottom"
                        android:hint="@string/contact_details_host"
                        android:inputType="phone"
                        android:lines="1"
                        android:paddingHorizontal="10dp"
                        android:paddingBottom="10dp"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#0e3e76" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvSelectDate"
                            style="@style/fontRegulat"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="bottom"
                            android:hint="@string/date"
                            android:lines="1"
                            android:paddingHorizontal="10dp"
                            android:paddingBottom="10dp"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tvSelectTime"
                            style="@style/fontRegulat"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:gravity="bottom"
                            android:hint="@string/time"
                            android:lines="1"
                            android:paddingHorizontal="10dp"
                            android:paddingBottom="10dp"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#0e3e76" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <ProgressBar
                                android:id="@+id/progressLocation"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center" />

                            <EditText
                                android:id="@+id/tvCurrentLocation"
                                style="@style/fontRegulat"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@null"
                                android:ellipsize="end"
                                android:gravity="bottom"
                                android:hint="@string/location"
                                android:inputType="text"
                                android:lines="2"
                                android:paddingHorizontal="10dp"
                                android:paddingBottom="10dp"
                                android:textSize="15sp" />

                        </FrameLayout>

                        <ImageView
                            android:id="@+id/ivCurrentLocation"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:contentDescription="@string/location"
                            android:focusable="true"
                            android:src="@drawable/ic_location" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#0e3e76" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvSelectImage"
                            style="@style/fontRegulat"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="bottom|center|start"
                            android:hint="@string/upload_photo"
                            android:paddingHorizontal="10dp"
                            android:paddingBottom="10dp"
                            android:textSize="15sp" />

                        <ImageView
                            android:id="@+id/ivSelectedImage"
                            android:layout_width="0dp"
                            android:layout_height="0dp" />

                        <ImageView
                            android:id="@+id/ivSelectImage"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:contentDescription="@string/upload_photo"
                            android:focusable="true"
                            android:src="@drawable/ic_camera" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#0e3e76" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveAndInvitePeople"
        style="@style/fontSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_below="@id/cardMain"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginVertical="15dp"
        android:gravity="center"
        android:text="@string/invite"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:cornerRadius="20dp" />

</RelativeLayout>