<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/ivEventPoster"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10sp"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher_round"
        app:riv_corner_radius="20dp" />

    <TextView
        android:id="@+id/tvEventTitle"
        style="@style/fontBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:layout_marginVertical="10dp"
        android:gravity="start"
        android:text="@string/event_title"
        android:textColor="@color/back"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/eventDate"
                    style="@style/fontBold"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#0e3e76"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:text="Date"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/eventMonth"
                    style="@style/fontBold"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:text="Month"
                    android:textColor="@color/white" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/eventTimeAndPlace"
            style="@style/fontBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:text="12:00 PM\nAurangabad, Maharashtra, India."
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/fontRegulat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/attending"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/attending"
                style="@style/fontBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="04"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="19sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/fontRegulat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/not_attending"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/notAttending"
                style="@style/fontBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="04"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="19sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/fontRegulat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Maybe"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/maybe"
                style="@style/fontBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="04"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="19sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#dcdcdc" />

</LinearLayout>